--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
+    compile project(':FCL')
+
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
